--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,42 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --clr-orange: hsl(25, 97%, 53%);
+  --clr-white: hsl(0, 0%, 100%);
+  --clr-light-grey: hsl(217, 12%, 63%);
+  --clr-blue: hsl(215, 30%, 30%);
+  --clr-dark-blue: hsl(213, 19%, 18%);
+  --clr-very-dark-blue: hsl(216, 12%, 8%);
+
+  --fw-light: 100;
+  --fw-normal: 400;
+  --fw-bold: 700;
+}
+
+#root {
+  margin: auto;
+}
+
+body {
+  font-size: 22px;
+  font-family: 'Overpass', sans-serif;
+  font-weight: var(--fw-light);
+
+  color: var(--clr-white);
+  background-color: var(--clr-very-dark-blue);
+
+  display: flex;
+  justify-content: center;
+  align-content: center;
+
+  height: 100vh;
+}
+
+h1 {
+  font-size: 3.5rem;
+  margin: .25em;
 }
